--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container" id="container-overlap">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Login Form</h2>
@@ -41,6 +41,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
+  <script type="module" src="js/loginscene.js"></script>
 
 </body>
 
