--- a/public/videos.html
+++ b/public/videos.html
@@ -29,11 +29,13 @@
     
 
 	<body>
+        <div class="background"></div>
+
         <nav class="navbar navbar-default">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a class="navbar-brand" href="/members.html">
-                    Members Home
+                <a class="navbar-brand" href="/boxSim.html">
+                    Box Simulation
                  </a>
                 <a class="navbar-brand" href="/logout">
                   Logout
@@ -73,8 +75,6 @@
                 
             </div>
         </div>
-		
-        <script src="https://apis.google.com/js/api.js"></script>
 		<script type="module" src="js/scene.js">
 
 		</script>
