--- a/public/boxSim.html
+++ b/public/boxSim.html
@@ -5,6 +5,9 @@
   <title>Box Simulation</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet"> 
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
   
@@ -18,16 +21,21 @@
 </head>
 
 <body>
-    <div class="background"></div>
-
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/videos.html"> YouCube </a>
-      <a class="navbar-brand" href="/logout"> Logout </a>
-    </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-dark bg-dark" style="text-align:center">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/logout">
+              Logout
+           </a>
+           <a class="navbar-brand" href="/members.html">
+            Home
+          </a>
+          <a class="navbar-brand" href="/videos.html">
+            YouCube
+          </a>
+          </div>
+        </div>
+      </nav>
 
   <div class="container">
     <div class="row">
