--- a/public/login.html
+++ b/public/login.html
@@ -18,10 +18,10 @@
       </div>
     </div>
   </nav>
-  <div class="container" id="container-overlap">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
+  <div class="container" id="container-overlap" >
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <h2>Login</h2>
         <form class="login">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
