--- a/public/members.html
+++ b/public/members.html
@@ -5,18 +5,17 @@
   <title>Home Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-
-  <link href="stylesheets/style.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r122/three.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r122/three.module.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet"> 
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
   
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-dark bg-dark" style="text-align:center">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/logout">
@@ -26,25 +25,28 @@
         Beginner Box Simulation
       </a>
       <a class="navbar-brand" href="/videos.html">
-        Videos Simulation
+        Videos Box Simulation
       </a>
       </div>
     </div>
   </nav>
-
+  <br>
   <div class="container">
     <div class="row">
-      <!-- add nav bar with links to other simulations  -->
-      <div class="col-md-6" >
-        <h2>Welcome <span class="member-name"></span></h2>
-      <div id ="parameters">
+      <div class="col-md-1"></div>
+      <div class="col-md-10 col-md-offset-3" >
+        <div class="jumbotron">
+          <h1 class="display-4">Welcome <span class="member-name"></span></h1>
+          <p class="lead">This web app was created as a project while enrolled at the University of Texas Web Development Bootcamp. We were tasked with creating an app that included user authorization, 1 api, and a MySQL database. It is currently being deployed through Heroku on their free tier. We will post updates, bugs, and announcements below. </p>
+          <hr class="my-4">
+          <p>General Use: </p>
+          <p>Bugs: </p>
+          <p>Challenges: </p>
+            <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">gitHub</a>
+          </p>
+        </div>
       </div>
-      <div class="col-md-6" >
-        <canvas id = "animation"></canvas>
-      </div>
-    
-  </div>
-
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
