--- a/public/signup.html
+++ b/public/signup.html
@@ -11,17 +11,16 @@
 </head>
 
 <body>
-  <div class="background"></div>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
+  <div class="container" id="container-overlap" >
+    <div class="row justify-content-md-center">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h2>Sign Up</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -45,6 +44,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
+  <script type="module" src="js/loginscene.js"></script>
 
 </body>
 
