added information to the members page

--- a/public/members.html
+++ b/public/members.html
@@ -37,13 +37,18 @@
       <div class="col-md-10 col-md-offset-3" >
         <div class="jumbotron">
           <h1 class="display-4">Welcome <span class="member-name"></span></h1>
-          <p class="lead">This web app was created as a project while enrolled at the University of Texas Web Development Bootcamp. We were tasked with creating an app that included user authorization, 1 api, and a MySQL database. It is currently being deployed through Heroku on their free tier. We will post updates, bugs, and announcements below. </p>
+          <p class="lead">This web app was created as a project while enrolled at 
+            the University of Texas Web Development Bootcamp. We were tasked with 
+            creating an app that included user authorization, 1 api, and a MySQL database. 
+            It is currently being deployed through Heroku on their free tier. 
+            We will post updates, bugs, and announcements below. </p>
           <hr class="my-4">
-          <p>General Use: </p>
-          <p>Bugs: </p>
-          <p>Challenges: </p>
+          <p>General Use: You can click on the box Simulation or Youcube page to see how THREE.js is 
+            incorporated into this webpage </p>
+          <p>Bugs: Loading the saved parameters on the box simulation does not work for all of the fields.</p>
+          <p>Challenges: Connecting the animation back end to the front end and changing them dynamically</p>
             <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">gitHub</a>
+            <a class="btn btn-primary btn-lg" href="https://github.com/26rsuarez/chillcubes" role="button">gitHub</a>
           </p>
         </div>
       </div>
